--- a/backend/package.json
+++ b/backend/package.json
@@ -3,31 +3,29 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "build": "webpack",
+    "start": "node index.js",
     "style": "npx prettier . --write",
     "test": ""
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1",
-    "helmet": "^8.0.0",
-    "morgan": "^1.10.0"
+    "hono": "^4.6.13",
+    "archiver": "^7.0.1"
   },
   "devDependencies": {
-    "jsdocs": "^1.0.0",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
+    "@hono/node-server": "^1.13.7",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@hono/node-server": "^1.13.7",
+    "babel-loader": "^9.2.1",
+    "nodemon": "^3.1.9",
+    "sharp": "^0.33.5",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
   "main": "app.js",
   "author": "thenetaji",
-  "license": "MIT",
-  "packageManager": "yarn@4.5.1"
+  "license": "MIT"
 }
-
