--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
+# Node.js
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build outputs
+dist/
+build/
+*.out
+
+# Editor and OS-specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+*.orig
+
+# IDE files
+*.iml
+*.ipr
+*.iws
+.project
+.classpath
+
+# Python
+__pycache__/
+*.venv/
+
+#
+package-lock.json
