Just fixing codes but pushing this because i need to work on ec2

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "type": "module",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "build": "webpack",
     "start": "node index.js",
@@ -9,13 +9,11 @@
     "test": ""
   },
   "dependencies": {
-    "hono": "^4.6.13",
-    "archiver": "^7.0.1"
+    "archiver": "^7.0.1",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@hono/node-server": "^1.13.7",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@hono/node-server": "^1.13.7",
@@ -25,7 +23,7 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
-  "main": "app.js",
+  "main": "index.js",
   "author": "thenetaji",
   "license": "MIT"
 }
