--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,19 @@
 {
   "name": "frontend",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "scripts": {
     "dev:vite": "vite dev",
     "preview:vite": "vite preview",
     "build:vite": "vite build",
     "dev:webpack": "webpack serve",
     "build:webpack": "webpack build",
+    "partytown": "partytown copylib public/~partytown",
     "style": "npx prettier . --write"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "@builder.io/partytown": "^0.10.2"
+    "@qwik.dev/partytown": "^0.11.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.14",
