--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
 {
   "name": "backend",
   "type": "module",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "scripts": {
     "build": "webpack",
-    "start": "node index.js",
+    "start": "node app.js",
     "style": "npx prettier . --write",
     "test": ""
   },
   "dependencies": {
     "archiver": "^7.0.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1"
   },
